Bug 345071 - KMail crashed while I was reading an email
Summary: KMail crashed while I was reading an email
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-11 23:17 UTC by Dennis Schridde
Modified: 2015-03-14 09:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.16.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Schridde 2015-03-11 23:17:38 UTC
Application: kmail (4.14.6)
KDE Platform Version: 4.14.6
Qt Version: 4.8.6
Operating System: Linux 3.19.0-gentoo x86_64
Distribution: "Gentoo Base System release 2.2"

-- Information about the crash:
- What I was doing when the application crashed:

I was reading an email, not doing anything else with the system, and suddenly KMail crashed.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f965169f800 (LWP 799))]

Thread 3 (Thread 0x7f964c552700 (LWP 815)):
#0  0x000000319ac0c84f in pthread_cond_wait () from /lib64/libpthread.so.0
#1  0x0000003dc912ed3a in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x0000003dc912ed79 in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#3  0x000000319ac072f6 in start_thread () from /lib64/libpthread.so.0
#4  0x000000319a4eabdd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f964bc51700 (LWP 816)):
#0  0x00007fffef76ba7e in clock_gettime ()
#1  0x000000319a4f7a12 in clock_gettime () from /lib64/libc.so.6
#2  0x0000003dbe4d1947 in do_gettime (frac=0x7f964bc50b50, sec=0x7f964bc50b48) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/tools/qelapsedtimer_unix.cpp:127
#3  qt_gettime () at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/tools/qelapsedtimer_unix.cpp:144
#4  0x0000003dbe5ae905 in updateCurrentTime (this=0x7f96440030e0) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f96440030e0, tm=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_unix.cpp:460
#6  0x0000003dbe5acfac in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f964bc50c04) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_glib.cpp:143
#7  0x0000003dbe5ad04d in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_glib.cpp:176
#8  0x0000003dbcc4a363 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#9  0x0000003dbcc4acbb in ?? () from /usr/lib64/libglib-2.0.so.0
#10 0x0000003dbcc4aeb4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#11 0x0000003dbe5ad0f6 in QEventDispatcherGlib::processEvents (this=0x7f96440008c0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_glib.cpp:452
#12 0x0000003dbe57e71f in QEventLoop::processEvents (this=this@entry=0x7f964bc50de0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventloop.cpp:149
#13 0x0000003dbe57ea0d in QEventLoop::exec (this=this@entry=0x7f964bc50de0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventloop.cpp:204
#14 0x0000003dbe479a30 in QThread::exec (this=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/thread/qthread.cpp:538
#15 0x0000003dbe47c34f in QThreadPrivate::start (arg=0x12419d0) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/thread/qthread_unix.cpp:349
#16 0x000000319ac072f6 in start_thread () from /lib64/libpthread.so.0
#17 0x000000319a4eabdd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f965169f800 (LWP 799)):
[KCrash Handler]
#6  0x0000003ea1139ad0 in Akonadi::FavoriteCollectionsModel::removeCollection (this=0x0, collection=...) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/favoritecollectionsmodel.cpp:294
#7  0x0000003bb16e0c8c in KMMainWidget::slotCollectionRemoved (this=<optimized out>, col=...) at /var/tmp/portage/kde-base/kmail-4.14.6/work/kmail-4.14.6/kmail/kmmainwidget.cpp:4501
#8  0x0000003bb17e429f in KMMainWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/kmail-4.14.6/work/kmail-4.14.6_build/kmail/moc_kmmainwidget.cpp:488
#9  0x0000003dbe593e3a in QMetaObject::activate (sender=0xfad9d0, m=m@entry=0x3ea14da280 <Akonadi::Monitor::staticMetaObject>, local_signal_index=local_signal_index@entry=16, argv=argv@entry=0x7fffef6fe300) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qobject.cpp:3567
#10 0x0000003ea11717e5 in Akonadi::Monitor::collectionRemoved (this=<optimized out>, _t1=...) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6_build/akonadi/moc_monitor.cpp:343
#11 0x0000003ea117cc0e in Akonadi::MonitorPrivate::emitCollectionNotification (this=this@entry=0xc8d300, msg=..., col=..., par=..., dest=...) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/monitor_p.cpp:958
#12 0x0000003ea117d77f in Akonadi::MonitorPrivate::emitNotification (this=0xc8d300, msg=...) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/monitor_p.cpp:504
#13 0x0000003ea1179657 in Akonadi::MonitorPrivate::flushPipeline (this=this@entry=0xc8d300) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/monitor_p.cpp:718
#14 0x0000003ea1179899 in Akonadi::MonitorPrivate::dataAvailable (this=0xc8d300) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/monitor_p.cpp:727
#15 0x0000003dbe593e3a in QMetaObject::activate (sender=sender@entry=0xc96470, m=m@entry=0x3ea14d8140 <Akonadi::EntityCacheBase::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qobject.cpp:3567
#16 0x0000003ea11115a0 in Akonadi::EntityCacheBase::dataAvailable (this=this@entry=0xc96470) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6_build/akonadi/moc_entitycache_p.cpp:101
#17 0x0000003ea10c9481 in Akonadi::EntityCache<Akonadi::Collection, Akonadi::CollectionFetchJob, Akonadi::CollectionFetchScope>::processResult (this=0xc96470, job=<optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.14.6/work/kdepimlibs-4.14.6/akonadi/entitycache_p.h:217
#18 0x0000003dbe593e3a in QMetaObject::activate (sender=sender@entry=0x1954c70, m=m@entry=0x3e9f8d9ee0 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fffef6fe880) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qobject.cpp:3567
#19 0x0000003e9f53ea32 in KJob::result (this=this@entry=0x1954c70, _t1=_t1@entry=0x1954c70) at /var/tmp/portage/kde-base/kdelibs-4.14.6-r1/work/kdelibs-4.14.6_build/kdecore/kjob.moc:207
#20 0x0000003e9f53ea80 in KJob::emitResult (this=0x1954c70) at /var/tmp/portage/kde-base/kdelibs-4.14.6-r1/work/kdelibs-4.14.6/kdecore/jobs/kjob.cpp:318
#21 0x0000003dbe5982c6 in QObject::event (this=0x1954c70, e=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qobject.cpp:1222
#22 0x0000003216fcaf9c in QApplicationPrivate::notify_helper (this=this@entry=0xc63560, receiver=receiver@entry=0x1954c70, e=e@entry=0x1838c10) at /var/tmp/portage/dev-qt/qtgui-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/gui/kernel/qapplication.cpp:4565
#23 0x0000003216fd15c5 in QApplication::notify (this=this@entry=0x7fffef6ff290, receiver=receiver@entry=0x1954c70, e=e@entry=0x1838c10) at /var/tmp/portage/dev-qt/qtgui-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/gui/kernel/qapplication.cpp:4351
#24 0x0000003e9fc50c5b in KApplication::notify (this=0x7fffef6ff290, receiver=0x1954c70, event=0x1838c10) at /var/tmp/portage/kde-base/kdelibs-4.14.6-r1/work/kdelibs-4.14.6/kdeui/kernel/kapplication.cpp:311
#25 0x0000003dbe57fbdc in QCoreApplication::notifyInternal (this=0x7fffef6ff290, receiver=receiver@entry=0x1954c70, event=event@entry=0x1838c10) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.cpp:953
#26 0x0000003dbe582e33 in sendEvent (event=0x1838c10, receiver=0x1954c70) at ../../include/QtCore/../../../qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.h:231
#27 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, receiver@entry=0xc63970, event_type=event_type@entry=0, data=0xbf2ff0) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.cpp:1577
#28 0x0000003dbe5832b7 in QCoreApplication::sendPostedEvents (receiver=0xc63970, receiver@entry=0x0, event_type=event_type@entry=0) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.cpp:1470
#29 0x0000003dbe5ad90e in sendPostedEvents () at ../../include/QtCore/../../../qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.h:236
#30 postEventSourceDispatch (s=0xc63970) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_glib.cpp:300
#31 0x0000003dbcc4ab14 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#32 0x0000003dbcc4adf5 in ?? () from /usr/lib64/libglib-2.0.so.0
#33 0x0000003dbcc4aeb4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#34 0x0000003dbe5ad0dc in QEventDispatcherGlib::processEvents (this=0xbf44d0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventdispatcher_glib.cpp:450
#35 0x000000321706a55e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at /var/tmp/portage/dev-qt/qtgui-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#36 0x0000003dbe57e71f in QEventLoop::processEvents (this=this@entry=0x7fffef6feee0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventloop.cpp:149
#37 0x0000003dbe57ea0d in QEventLoop::exec (this=this@entry=0x7fffef6feee0, flags=...) at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qeventloop.cpp:204
#38 0x0000003dbe583e27 in QCoreApplication::exec () at /var/tmp/portage/dev-qt/qtcore-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/corelib/kernel/qcoreapplication.cpp:1225
#39 0x0000003216fc955c in QApplication::exec () at /var/tmp/portage/dev-qt/qtgui-4.8.6-r1/work/qt-everywhere-opensource-src-4.8.6/src/gui/kernel/qapplication.cpp:3823
#40 0x0000000000402e62 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-base/kmail-4.14.6/work/kmail-4.14.6/kmail/main.cpp:145

Reproducible: Always
Comment 1 Laurent Montel 2015-03-12 06:48:04 UTC
Ok I found bug.
Fixed soon.
Comment 2 Laurent Montel 2015-03-12 06:48:53 UTC
The problem was not that you read email, just that favorite model doesn't exist for you.
Comment 3 Laurent Montel 2015-03-12 06:49:20 UTC
Git commit b6196bc1fd489a5be69731ca9a19d8a95f721570 by Montel Laurent.
Committed on 12/03/2015 at 06:48.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 345071 - KMail crashed while I was reading an email
FIXED-IN: 4.16.7

M  +2    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/b6196bc1fd489a5be69731ca9a19d8a95f721570
Comment 4 Laurent Montel 2015-03-12 06:58:41 UTC
if you don't want to have this crash until 4.16.7 add favorite it will not crash.
It crashs because favorite is not show in kmail and a signal try to access to it.
Comment 5 Dennis Schridde 2015-03-14 09:58:32 UTC
Thanks for the quick fix!