Fix Bug 345071 - KMail crashed while I was reading an email

BUG: 345071
FIXED-IN: 4.16.7